--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </video>
         <img id="castelo" src="img/castle.jpg">
         <section>
-            <h2>Surgimento!!</h2>
+            <h2>Surgimento</h2>
             <p> Você já se perguntou como a Disney surgiu? Essa empresa de entretenimento, que é conhecida mundialmente
                 por
                 suas animações, parques temáticos e produtos licenciados, teve sua origem em 1923, quando os irmãos Walt
