--- a/parques.html
+++ b/parques.html
@@ -15,8 +15,7 @@
 <body>
     <header id="topo">
         <ul>
-            <li><img src="img/logos.png"></li>
-            <li><a href="index.html">INÍCIO</a></li>
+            <li><a href="index.html"><img src="img/logos.png"></a></li>
             <li><a class="pagina_atual" href="parques.html">PARQUES</a></li>
             <li><a href="filmes.html">FILMES</a></li>
             <li><a href="referencias.html">REFERÊNCIAS</a></li>
