--- a/parques.html
+++ b/parques.html
@@ -14,6 +14,7 @@
 
 <body>
     <header id="topo">
+        <img src="img/logos.png">
         <ul>
             <li><a href="index.html"><img src="img/logos.png"></a></li>
             <li><a class="pagina_atual" href="parques.html">PARQUES</a></li>
