--- a/referencias.html
+++ b/referencias.html
@@ -16,6 +16,7 @@
 
 <body>
     <header id="topo">
+        <img src="img/logos.png">
         <ul>
             <li><a href="index.html"><img src="img/logos.png"></a></li>
             <li><a href="parques.html">PARQUES</a></li>
