--- a/filmes.html
+++ b/filmes.html
@@ -8,16 +8,14 @@
     <link rel="icon" href="img/icone.png">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="filmes.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header id="topo">
         <img src="img/logos.png">
         <ul>
-            <li><a href="index.html"><img src="img/logos.png"></a></li>
+            <li><a href="index.html">INÍCIO</a></li>
             <li><a href="parques.html">PARQUES</a></li>
             <li><a class="pagina_atual" href="filmes.html">FILMES</a></li>
             <li><a href="referencias.html">REFERÊNCIAS</a></li>
