--- a/referencias.html
+++ b/referencias.html
@@ -7,9 +7,6 @@
     <title>Disney</title>
     <link rel="icon" href="img/icone.png">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
 
 
 </head>
@@ -18,7 +15,7 @@
     <header id="topo">
         <img src="img/logos.png">
         <ul>
-            <li><a href="index.html"><img src="img/logos.png"></a></li>
+            <li><a href="index.html">INÍCIO</a></li>
             <li><a href="parques.html">PARQUES</a></li>
             <li><a href="filmes.html">FILMES</a></li>
             <li><a class="pagina_atual" href="referencias.html">REFERÊNCIAS</a></li>
