--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 
 <body>
     <header id="topo">
-        <img src="img/logos.png">
-        <ul>
-            <li><a class="pagina_atual" href="index.html">INÍCIO</a></li>
-            <li><a href="parques.html">PARQUES</a></li>
-            <li><a href="filmes.html">FILMES</a></li>
-            <li><a href="referencias.html">REFERÊNCIAS</a></li>
-        </ul>
+        <nav>
+            <img src="img/logos.png">
+            <ul class="nav-list">
+                <li><a class="pagina_atual" href="index.html">INÍCIO</a></li>
+                <li><a href="parques.html">PARQUES</a></li>
+                <li><a href="filmes.html">FILMES</a></li>
+                <li><a href="referencias.html">REFERÊNCIAS</a></li>
+            </ul>
+            <button class="menu">☰</button>
+        </nav>
+
     </header>
 
     <main>
@@ -91,7 +95,7 @@
         </section>
 
 
-        <section id="section-filmes"  class="section-images">
+        <section id="section-filmes" class="section-images">
             <img id="filmes" class="img" src="img/filmes.jpg">
             <div>
                 <h2>Filmes</h2>
