--- a/referencias.html
+++ b/referencias.html
@@ -13,13 +13,16 @@
 
 <body>
     <header id="topo">
-        <img src="img/logos.png">
-        <ul>
-            <li><a href="index.html">INÍCIO</a></li>
-            <li><a href="parques.html">PARQUES</a></li>
-            <li><a href="filmes.html">FILMES</a></li>
-            <li><a class="pagina_atual" href="referencias.html">REFERÊNCIAS</a></li>
-        </ul>
+        <nav>
+            <img src="img/logos.png">
+            <ul class="nav-list">
+                <li><a href="index.html">INÍCIO</a></li>
+                <li><a href="parques.html">PARQUES</a></li>
+                <li><a href="filmes.html">FILMES</a></li>
+                <li><a class="pagina_atual" href="referencias.html">REFERÊNCIAS</a></li>
+            </ul>
+            <button class="menu">☰</button>
+        </nav>
     </header>
 
     <main id="referencia">
