--- a/referencias.html
+++ b/referencias.html
@@ -51,6 +51,8 @@
         <img src="img/footer.png">
         <p>Esse site tem intuito avaliativo e foi produzido por aluna Isabella, de INF1A</p> 
     </footer>
+    <script src="java.js"></script>
+    
 </body>
 
 </html>
