--- a/html/filmes.html
+++ b/html/filmes.html
@@ -7,7 +7,7 @@
     <title>Filmes</title>
     <link rel="icon" href="img/icone.png">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="css/filmes.css">
+    <link rel="stylesheet" href="filmes.css">
 
 </head>
 
@@ -16,10 +16,10 @@
         <nav>
             <img src="img/logos.png">
             <ul class="nav-list">
-                <li><a href="html/index.html">INÍCIO</a></li>
-                <li><a href="html/parques.html">PARQUES</a></li>
-                <li><a class="pagina_atual" href="html/filmes.html">FILMES</a></li>
-                <li><a href="html/referencias.html">REFERÊNCIAS</a></li>
+                <li><a href="index.html">INÍCIO</a></li>
+                <li><a href="parques.html">PARQUES</a></li>
+                <li><a class="pagina_atual" href="filmes.html">FILMES</a></li>
+                <li><a href="referencias.html">REFERÊNCIAS</a></li>
             </ul>
             <button class="menu">☰</button>
         </nav>
@@ -90,6 +90,6 @@
         <p>Esse site tem intuito avaliativo e foi produzido por aluna Isabella, de INF1A</p> 
     </footer>
     <script src="java.js"></script>
-
+    
 </body>
 </html>
