--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Disney</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/icone.png">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 
 </head>
 
@@ -15,10 +15,10 @@
         <nav>
             <img src="img/logos.png">
             <ul class="nav-list">
-                <li><a class="pagina_atual" href="html/index.html">INÍCIO</a></li>
-                <li><a href="html/parques.html">PARQUES</a></li>
-                <li><a href="html/filmes.html">FILMES</a></li>
-                <li><a href="html/referencias.html">REFERÊNCIAS</a></li>
+                <li><a class="pagina_atual" href="index.html">INÍCIO</a></li>
+                <li><a href="parques.html">PARQUES</a></li>
+                <li><a href="filmes.html">FILMES</a></li>
+                <li><a href="referencias.html">REFERÊNCIAS</a></li>
             </ul>
             <button class="menu">☰</button>
         </nav>
@@ -123,7 +123,7 @@
         <p>Esse site tem intuito avaliativo e foi produzido por aluna Isabella, de INF1A</p>
     </footer>
     <script src="java.js"></script>
-
+    
 </body>
 
 </html>
