--- a/html/referencias.html
+++ b/html/referencias.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Disney</title>
     <link rel="icon" href="img/icone.png">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 
 
 </head>
@@ -16,10 +16,10 @@
         <nav>
             <img src="img/logos.png">
             <ul class="nav-list">
-                <li><a href="index.html">INÍCIO</a></li>
-                <li><a href="parques.html">PARQUES</a></li>
-                <li><a href="filmes.html">FILMES</a></li>
-                <li><a class="pagina_atual" href="referencias.html">REFERÊNCIAS</a></li>
+                <li><a href="html/index.html">INÍCIO</a></li>
+                <li><a href="html/parques.html">PARQUES</a></li>
+                <li><a href="html/filmes.html">FILMES</a></li>
+                <li><a class="pagina_atual" href="html/referencias.html">REFERÊNCIAS</a></li>
             </ul>
             <button class="menu">☰</button>
         </nav>
