--- a/html/filmes.html
+++ b/html/filmes.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Filmes</title>
     <link rel="icon" href="img/icone.png">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/filmes.css">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="filmes.css">
 
 </head>
 
