--- a/html/filmes.html
+++ b/html/filmes.html
@@ -16,10 +16,10 @@
         <nav>
             <img src="img/logos.png">
             <ul class="nav-list">
-                <li><a href="html/index.html">INÍCIO</a></li>
-                <li><a href="html/parques.html">PARQUES</a></li>
-                <li><a class="pagina_atual" href="html/filmes.html">FILMES</a></li>
-                <li><a href="html/referencias.html">REFERÊNCIAS</a></li>
+                <li><a href="index.html">INÍCIO</a></li>
+                <li><a href="parques.html">PARQUES</a></li>
+                <li><a class="pagina_atual" href="filmes.html">FILMES</a></li>
+                <li><a href="referencias.html">REFERÊNCIAS</a></li>
             </ul>
             <button class="menu">☰</button>
         </nav>
